tests/unsafe/fail_simple/fail_simple.snap
---
source: tests/lib.rs
---
exit_code = 101
stdout = ''
stderr = '''
error: function main directly contains 1 unjustified call to annotated unsafe functions, but is not annotated unsafe
  --> src/main.rs:8:1
   |
 8 | fn main() {
   | ^^^^^^^^^
   |
   = note: reachable from [*main*]
note: foo is called here
  --> src/main.rs:10:5
   |
10 |     foo(&raw const x);
   |     ^^^^^^^^^^^^^^^^^

error: could not compile `fail_simple` (bin "fail_simple") due to 1 previous error
'''
